<resources>
    <string name="app_name">Thợ ơi</string>
    <string name="label_notification">Thông báo</string>
    <string name="label_message">Tin nhắn</string>
    <string name="description_logo">Logo</string>
    <string name="hint_email_address">Địa chỉ email*</string>
    <string name="hint_password">Mật khẩu*</string>
    <string name="label_sign_in">Đăng nhập</string>
    <string name="label_sign_in_with_google">Đăng nhập bằng Google</string>
    <string name="label_or">or</string>
    <string name="label_forgot_password">Quên mật khẩu?</string>
    <string name="label_do_not_have_an_account">Chưa có tài khoản?</string>
    <string name="label_create_now">Tạo ngay</string>
    <string name="label_customer">Khách hàng</string>
    <string name="label_fixer">Thợ sửa</string>
    <string name="default_notification_channel_id">default_channel</string>
    <string name="hint_full_name">Họ tên</string>
    <string name="hint_phone">Số điện thoại</string>
    <string name="hint_address">Địa chỉ</string>
    <string name="label_category">Chuyên nghành</string>
    <string name="hint_birthday">Ngày sinh</string>
    <string name="hint_description">Mô tả</string>
    <string name="hint_change_password">Đổi mật khẩu</string>
    <string name="label_sign_up">Đăng ký</string>

    <string name="label_post_detail">Bài viết</string>
    <string name="label_description">Mô tả</string>
    <string name="label_location">Địa điểm</string>
    <string name="label_fixers_applied">Thợ đã ứng tuyển</string>
    <string name="label_apply">Nhận việc</string>

    <string name="label_schedule_manager">Quản lý công việc</string>
    <string name="label_schedule">Lịch trình</string>
    <string name="label_history">Lịch sử</string>
    <string name="label_home">Trang chủ</string>
    <string name="label_post_create">Tạo bài viết</string>
    <string name="label_ranking">Xếp hạng</string>
    <string name="label_setting">Cài đặt</string>
    <string name="label_discovery">Khám phá danh mục</string>
    <string name="label_post">Bài viết</string>
    <string name="label_pending">Đang chờ thợ</string>
    <string name="label_job_finished">Đã hoàn thành</string>
    <string name="label_job_applied">Đã nhận việc</string>
    <string name="label_job_assigned_to_other">Đã được giao cho người khác</string>
    <string name="label_job_assigned_to_you">Đã được giao cho bạn</string>
    <string name="label_job_on_progress">Đang tiến hành</string>
    <string name="label_profile">Hồ sơ</string>
    <string name="label_suggested_price">Tiền công dự kiến</string>
    <string name="label_appointment">Lịch hẹn dự kiến</string>

    <string name="action_apply_job">Nhận việc</string>
    <string name="action_close_post">Đóng bài viết</string>
    <string name="action_reassign">Chọn lại thợ</string>
    <string name="action_cancel_fixing">Hủy sửa chữa</string>
    <string name="action_assign_fixer">Phân công thợ</string>
    <string name="action_start_fixing">Bắt đầu sửa</string>
    <string name="action_finish_job">Hoàn thành công việc</string>

    <string name="default_channel_name">Mặc định</string>
    <string name="description_default_channel">Thông báo mặc định</string>

    <string name="error_unknown">Đã có lỗi xảy ra</string>
    <string name="error_unable_select_fixer">Lỗi: không thể chọn thợ</string>
    <string name="error_not_select_fixer">Lỗi: chưa chọn thợ</string>
    <string name="error_wrong_post_status">Lỗi: trạng thái bài viết sai</string>

    <string name="msg_assign_fixer_done">Đã phân công thợ</string>
    <string name="msg_reassign_fixer_done">Đã hủy phân công thợ</string>
    <string name="msg_cancel_fixing_done">Đã hủy trạng thái đang sửa chữa</string>
    <string name="msg_closed_post_done">Đã đóng bài viết</string>

    <string name="format_msg_fixer_selected">Bạn đã chọn thợ %s</string>
    <string name="type_your_message">Nhập tin nhắn…</string>
    <string name="error_cant_send_message">Không gửi được tin nhắn</string>
    <string name="error_user_not_found">Không tìm thấy người dùng</string>
    <string name="error_no_phone_app">Không tìm thấy ứng dụng phù hợp</string>
    <string name="msg_email_invalid">Email không hợp lệ</string>
    <string name="msg_weak_password">Mật khẩu quá ngắn</string>
    <string name="msg_require_not_empty">Không được để trống</string>
    <string name="msg_password_invalid">Mật khẩu không chính xác</string>
    <string name="msg_email_not_exist">Email không chính xác</string>
    <string name="msg_unknown_error">Có lỗi xảy ra</string>
    <string name="label_confirm">Xác nhận</string>
    <string name="label_confirm_reset_password">Bạn sẽ nhận được email reset mật khẩu</string>
    <string name="msg_email_not_verified">Chưa xác thực email này</string>
    <string name="msg_email_already_in_use">Email đã được sử dụng</string>
    <string name="msg_missing_permission">Bạn chưa cấp quyền vị trí</string>
    <string name="msg_missing_location_setting">Bạn chưa bật vị trí</string>
    <string name="label_choose_location">Chọn vị trí của bạn</string>
    <string name="format_label_created_date">Ngày tham gia: %s</string>
    <string name="format_label_email">Email: %s</string>
    <string name="format_label_address">Địa chỉ: %s</string>
    <string name="format_label_birth_day">Ngày sinh: %s</string>
    <string name="action_call">Gọi</string>
    <string name="action_chat">Nhắn tin</string>
    <string name="title_settings">Cài đặt</string>
    <string name="label_logout">Đăng xuất</string>
    <string name="label_edit_profile">Chỉnh sửa thông tin cá nhân</string>
    <string name="label_about">Thông tin ứng dụng</string>
    <string name="hint_reset_password">Đổi mật khẩu</string>
    <string name="label_save">Lưu</string>
    <string name="title_new_post">Đăng tin tìm thợ</string>
    <string name="hint_category">Chọn dịch vụ</string>
    <string name="hint_work_time">Giờ làm việc</string>
    <string name="hint_suggest_price">Giá đề xuất</string>
    <string name="label_find_a_fixer">Tìm thợ</string>
    <string name="msg_permission_denied">Yêu cầu cấp quyền bị từ chối</string>
    <string name="msg_missing_feature">Chức năng đang phát triển</string>
    <string name="hint_title">Tiêu đề</string>
</resources>
