<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="MissingConstraints">

    <include layout="@layout/toolbar_app" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleButtonGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_16"
        app:checkedButton="@+id/buttonCustomer"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonCustomer"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/dp_128"
            android:text="@string/label_customer"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/dp_8" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonFixer"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/dp_128"
            android:text="@string/label_fixer"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/dp_8" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:padding="@dimen/dp_16"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayoutName"
                style="@style/StyleTextInputLayout"
                app:startIconDrawable="@drawable/ic_outline_account_circle_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_full_name"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayoutEmail"
                style="@style/StyleTextInputLayout"
                app:startIconDrawable="@drawable/ic_round_email_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email_address"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayoutPhone"
                style="@style/StyleTextInputLayout"
                app:startIconDrawable="@drawable/ic_round_phone_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_phone"
                    android:inputType="phone" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayoutAddress"
                style="@style/StyleTextInputLayout"
                app:startIconDrawable="@drawable/ic_round_not_listed_location_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/hint_address"
                    android:longClickable="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textLabelCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_category" />

            <HorizontalScrollView
                android:id="@+id/horizontalScrollCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroupCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:singleSelection="true" />
            </HorizontalScrollView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayoutBirthday"
                style="@style/StyleTextInputLayout"
                app:startIconDrawable="@drawable/ic_round_cake_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextBirthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/hint_birthday"
                    android:inputType="date"
                    android:longClickable="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayoutDescription"
                style="@style/StyleTextInputLayout"
                app:startIconDrawable="@drawable/ic_round_description_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_description"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayoutPassword"
                style="@style/StyleTextInputLayout"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_round_lock_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttonSignUp"
                style="@style/StyleButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_sign_up" />

            <androidx.constraintlayout.helper.widget.Flow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:constraint_referenced_ids="inputLayoutName,inputLayoutEmail,
                inputLayoutPhone,inputLayoutAddress,inputLayoutBirthday,textLabelCategory,
                horizontalScrollCategory,inputLayoutDescription,inputLayoutPassword,buttonSignUp"
                app:flow_verticalGap="@dimen/dp_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</LinearLayout>
